--- a/rag_impact_defense.ipynb
+++ b/rag_impact_defense.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvUqYaAkma2B5GktzsB4TJ",
+      "authorship_tag": "ABX9TyOm4fQe++4wXOERuJHEBwjr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3799,6 +3799,10 @@
         "\n",
         "Inspiration/code stolen from: https://colab.research.google.com/github/huggingface/cookbook/blob/main/notebooks/en/rag_with_hf_and_milvus.ipynb#scrollTo=oCvMRS5gT3oW\n",
         "\n",
+        "To do:\n",
+        "*   Last name by LLM is inconsistent.\n",
+        "*   Need to figure out docx processing tool.\n",
+        "\n",
         "Instructions:\n",
         "*   HF account.\n",
         "*   Connect colab.\n",
@@ -3825,7 +3829,7 @@
       "metadata": {
         "id": "TgQBP1bqDT3C"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -3838,31 +3842,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hsu8qR6dFoi5",
-        "outputId": "88ad4412-54c7-469a-dce2-e8edc1a97fc8"
+        "outputId": "f25a597d-2b07-4c01-f7b4-b740529afbec"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting pymilvus\n",
-            "  Downloading pymilvus-2.5.3-py3-none-any.whl.metadata (5.7 kB)\n",
+            "Requirement already satisfied: pymilvus in /usr/local/lib/python3.10/dist-packages (2.5.3)\n",
             "Requirement already satisfied: sentence-transformers in /usr/local/lib/python3.10/dist-packages (3.3.1)\n",
-            "Requirement already satisfied: huggingface-hub in /usr/local/lib/python3.10/dist-packages (0.27.0)\n",
-            "Collecting huggingface-hub\n",
-            "  Downloading huggingface_hub-0.27.1-py3-none-any.whl.metadata (13 kB)\n",
+            "Requirement already satisfied: huggingface-hub in /usr/local/lib/python3.10/dist-packages (0.27.1)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (4.67.1)\n",
             "Requirement already satisfied: setuptools>69 in /usr/local/lib/python3.10/dist-packages (from pymilvus) (75.1.0)\n",
-            "Collecting grpcio<=1.67.1,>=1.49.1 (from pymilvus)\n",
-            "  Downloading grpcio-1.67.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (3.9 kB)\n",
+            "Requirement already satisfied: grpcio<=1.67.1,>=1.49.1 in /usr/local/lib/python3.10/dist-packages (from pymilvus) (1.67.1)\n",
             "Requirement already satisfied: protobuf>=3.20.0 in /usr/local/lib/python3.10/dist-packages (from pymilvus) (4.25.5)\n",
             "Requirement already satisfied: python-dotenv<2.0.0,>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from pymilvus) (1.0.1)\n",
-            "Collecting ujson>=2.0.0 (from pymilvus)\n",
-            "  Downloading ujson-5.10.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (9.3 kB)\n",
+            "Requirement already satisfied: ujson>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from pymilvus) (5.10.0)\n",
             "Requirement already satisfied: pandas>=1.2.4 in /usr/local/lib/python3.10/dist-packages (from pymilvus) (2.2.2)\n",
-            "Collecting milvus-lite>=2.4.0 (from pymilvus)\n",
-            "  Downloading milvus_lite-2.4.11-py3-none-manylinux2014_x86_64.whl.metadata (9.2 kB)\n",
+            "Requirement already satisfied: milvus-lite>=2.4.0 in /usr/local/lib/python3.10/dist-packages (from pymilvus) (2.4.11)\n",
             "Requirement already satisfied: transformers<5.0.0,>=4.41.0 in /usr/local/lib/python3.10/dist-packages (from sentence-transformers) (4.47.1)\n",
             "Requirement already satisfied: torch>=1.11.0 in /usr/local/lib/python3.10/dist-packages (from sentence-transformers) (2.5.1+cu121)\n",
             "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.10/dist-packages (from sentence-transformers) (1.6.0)\n",
@@ -3892,27 +3890,7 @@
             "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn->sentence-transformers) (1.4.2)\n",
             "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn->sentence-transformers) (3.5.0)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.2->pandas>=1.2.4->pymilvus) (1.17.0)\n",
-            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch>=1.11.0->sentence-transformers) (3.0.2)\n",
-            "Downloading pymilvus-2.5.3-py3-none-any.whl (229 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m229.9/229.9 kB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading huggingface_hub-0.27.1-py3-none-any.whl (450 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m450.7/450.7 kB\u001b[0m \u001b[31m17.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading grpcio-1.67.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (5.9 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.9/5.9 MB\u001b[0m \u001b[31m76.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading milvus_lite-2.4.11-py3-none-manylinux2014_x86_64.whl (45.2 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m45.2/45.2 MB\u001b[0m \u001b[31m21.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading ujson-5.10.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (53 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m53.6/53.6 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: ujson, milvus-lite, grpcio, huggingface-hub, pymilvus\n",
-            "  Attempting uninstall: grpcio\n",
-            "    Found existing installation: grpcio 1.68.1\n",
-            "    Uninstalling grpcio-1.68.1:\n",
-            "      Successfully uninstalled grpcio-1.68.1\n",
-            "  Attempting uninstall: huggingface-hub\n",
-            "    Found existing installation: huggingface-hub 0.27.0\n",
-            "    Uninstalling huggingface-hub-0.27.0:\n",
-            "      Successfully uninstalled huggingface-hub-0.27.0\n",
-            "Successfully installed grpcio-1.67.1 huggingface-hub-0.27.1 milvus-lite-2.4.11 pymilvus-2.5.3 ujson-5.10.0\n"
+            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch>=1.11.0->sentence-transformers) (3.0.2)\n"
           ]
         }
       ]
@@ -3922,12 +3900,12 @@
       "source": [
         "import os\n",
         "\n",
-        "os.environ[\"HF_TOKEN\"] = \"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\""
+        "os.environ[\"HF_TOKEN\"] = \"hf token!\""
       ],
       "metadata": {
         "id": "ljAQbZOtHLxK"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -4498,6 +4476,17 @@
     {
       "cell_type": "code",
       "source": [
+        "PROMPT2 = \"\"\"Find only the last name of the author given the following context: Mark L. Haas 17, Department of Political Science, Duquesne University, July 2017, “Population Aging and International Conflict,” http://politics.oxfordre.com/view/10.1093/acrefore/9780190228637.001.0001/acrefore-9780190228637-e-589\"\"\""
+      ],
+      "metadata": {
+        "id": "OkqmOeqNvPt2"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from huggingface_hub import InferenceClient\n",
         "\n",
         "repo_id = \"mistralai/Mixtral-8x7B-Instruct-v0.1\"\n",
@@ -4507,7 +4496,7 @@
       "metadata": {
         "id": "z_rj43YNMnB_"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -4525,8 +4514,8 @@
       "cell_type": "code",
       "source": [
         "answer = llm_client.text_generation(\n",
-        "    prompt,\n",
-        "    max_new_tokens=1000,\n",
+        "    PROMPT2,\n",
+        "    max_new_tokens=50,\n",
         ").strip()\n",
         "print(answer)"
       ],
@@ -4535,15 +4524,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pe_JpRCzMsuh",
-        "outputId": "1cd19379-48f5-43b8-e80e-d34c0f033e7c"
+        "outputId": "43c51e36-7f45-42bf-8589-61cd406bd74a"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Economic decline does not cause war. This is because even under extraordinary economic conditions, the likelihood of war remains low. This is evidenced by the fact that out of 20 interstate wars, not one was related to the state of the economy. Countries care exclusively about security and not economic gain, and the odds of war only increase when the balance of power shifts in their favor. This proves that the scenario outweighs any potential economic incentives. Additionally, there is no modern case of a preventive war reversing decline, and every violent bid for mastery has ended in misery. Therefore, no mildly rational actor could view preventive war as the least bad option. Overall, preventive war theory fares the worst, and economic decline is a frequent feature of international politics, but preventive wars almost never happen. Advocates of preventive war logic underspecify their theory and overpredict their outcome. Where decline and war correlate, preventive war mechanisms are hard to find, so it may get these cases right for the wrong reasons.\n"
+            "Abstract:\n",
+            "\n",
+            "Population aging is a global phenomenon that has been occurring for decades, but it has only recently become a topic of interest in the study of international relations. This is because the aging of populations in developed countries has reached a\n"
           ]
         }
       ]
